@@ -1,4 +1,4 @@
-@set UPDATED 10 September 2010
-@set UPDATED-MONTH September 2010
+@set UPDATED 2 October 2010
+@set UPDATED-MONTH October 2010
 @set EDITION 4.13
 @set VERSION 4.13
